syntax = "proto3";

package pb;


message Geography {
        string id = 1;
        double longitude = 2;
        double latitude = 3;
}

message LocationDistanceRequest {
        double longitude = 1;
        double latitude = 2;
}

message LocationDistanceResponse {
        double geography = 1;
}


service GeographyService {
        rpc GetLocationDistance (LocationDistanceRequest) returns (LocationDistanceResponse) {}
}